# SuperMusicThingy

./: CMakeLists.txt  HaikuHpkg.sh  LICENSE  MusicThingy.cpp  MusicThingy_beta.cpp  README.md  Super Music Thingy.cpp  SuperMusicThingy.cpp  SuperMusicThingy.rdef  SuperMusicThingyNebula.rdef  haiku_helper_script_to_build_SuperMusicThingy_hpkg.sh  musicthingy.cpp
.github/workflows/: cmake-multi-platform.yml
